set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
file(GLOB OSGL_HEADERS ${PROJECT_SOURCE_DIR}/include/Control/*.h)
file(GLOB OSGL_CPP *.cpp)
add_library(Controller STATIC ${OSGL_CPP} ${OSGL_HEADERS})
target_link_libraries(Controller ${OPENSCENEGRAPH_LIBRARIES}  ${OSGDB_LIBRARIES} 
${OSGGA_LIBRARYIES} ${OSGVIEWER_LIBRARIES} ${OSGWIDGET_LIBRARIES} ${OSGQT_LIBRARIES} Qt5::Core ModelData)